--- a/composer.json
+++ b/composer.json
@@ -11,11 +11,18 @@
         }
     ],
     "require": {
+        "php": ">=7.4.0",
         "yiisoft/yii2": "~2.0.0"
     },
     "autoload": {
         "psr-4": {
             "zhuzixian520\\api_doc\\": ""
         }
-    }
+    },
+    "repositories": [
+        {
+            "type": "composer",
+            "url": "https://asset-packagist.org"
+        }
+    ]
 }
